--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -93,7 +93,7 @@
                 img.onerror = function() {
                     reject();
                 };
-                img.src = imageFolder + 'IMG_' + padNumber(imageIndex) + '.jpg';
+                img.src = imageFolder + 'image' + imageIndex + '.jpg';
             });
         }
 
