--- a/zhanshi/index.html
+++ b/zhanshi/index.html
@@ -3,207 +3,133 @@
 <head>
     <title>照片分享</title>
     <style>
-        body {
-            background-color: #f5f5f5;
-            font-family: Arial, sans-serif;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
 
-        h1 {
-            text-align: center;
-            padding: 20px 0;
-            color: #333;
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            padding: 20px;
         }
 
         .gallery {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+            align-items: flex-start;
+            gap: 20px;
+            margin-top: 30px;
         }
 
         .image-container {
+            width: 100%;
+            max-width: 400px;
             text-align: center;
-            margin: 20px;
-            background-color: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            transition: box-shadow 0.3s ease;
-            border-radius: 4px;
-            overflow: hidden;
-        }
-
-        .image-container:hover {
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .image-container img {
-            display: block;
             width: 100%;
             height: auto;
-            object-fit: cover;
+            border-radius: 5px;
         }
 
         .exif-info {
-            padding: 10px;
-            font-size: 14px;
-            color: #666;
-            text-align: left;
-            background-color: #f5f5f5;
-            border-top: 1px solid #ddd;
+            margin-top: 10px;
+            padding: 5px;
+            background-color: #fff;
+            border-radius: 5px;
+            font-size: 12px;
+            line-height: 1.4;
         }
 
         .exif-info p {
-            margin: 5px 0;
-        }
-
-        .exif-info p .label {
-            font-weight: bold;
+            margin: 0;
+            margin-bottom: 5px;
         }
     </style>
 </head>
 <body>
-    <h1>照片分享</h1>
-
     <div class="gallery"></div>
 
     <script src="exif.js"></script>
     <script>
-        var imageFolder = 'images/';
+        var imagesFolder = 'images/';
         var imagesPerLoad = 20;
         var scrollThreshold = 200;
-        var startIndex = 0;
+        var loadedImages = [];
 
-        function loadImage(imageIndex) {
-            return new Promise(function(resolve, reject) {
-                var img = new Image();
-                img.onload = function() {
-                    resolve(img);
-                };
-                img.onerror = function() {
-                    reject();
-                };
-                img.src = imageFolder + 'image' + imageIndex + '.jpg';
-            });
-        }
-
-        function loadImages(start, count) {
-            var gallery = document.querySelector('.gallery');
-
-            var loadPromises = [];
-            for (var i = start; i < start + count; i++) {
-                var imageIndex = i;
-
-                var loadPromise = loadImage(imageIndex).then(function(img) {
-                    var imageContainer = document.createElement('div');
-                    imageContainer.className = 'image-container';
-
-                    var image = document.createElement('img');
-                    image.src = img.src;
-                    imageContainer.appendChild(image);
-
-                    getExifInformation(img, imageContainer);
-
-                    gallery.appendChild(imageContainer);
-                }).catch(function() {
-                    console.log('Failed to load image: image' + imageIndex + '.jpg');
-                });
-
-                loadPromises.push(loadPromise);
-            }
-
-            Promise.all(loadPromises).then(function() {
-                sortImagesByExifDateTime();
-            });
-        }
-
-        function getExifInformation(image, element) {
+        function loadImageExif(image, element) {
             EXIF.getData(image, function() {
                 var exifInfo = document.createElement('div');
-                exifInfo.className = 'exif-info';
+                exifInfo.classList.add('exif-info');
 
-                var exifData = EXIF.getAllTags(this);
-                if (exifData) {
+                if (this.exifdata) {
                     var exifHtml = '';
-
-                    if (exifData.DateTimeOriginal) {
-                        var dateTaken = parseExifDateTime(exifData.DateTimeOriginal);
-                        exifHtml += '<p><span class="label">拍摄时间:</span> ' + formatDate(dateTaken) + '</p>';
-                    }
-
-                    if (exifData.GPSLatitude && exifData.GPSLongitude) {
-                        var latitude = parseExifCoordinate(exifData.GPSLatitude);
-                        var longitude = parseExifCoordinate(exifData.GPSLongitude);
-                        exifHtml += '<p><span class="label">经纬度:</span> ' + formatCoordinates(latitude, longitude) + '</p>';
-                    }
-
-                    exifHtml += '<p><span class="label">光圈:</span> ' + (exifData.FNumber || 'N/A') + '</p>';
-                    exifHtml += '<p><span class="label">焦距:</span> ' + (exifData.FocalLength || 'N/A') + '</p>';
-                    exifHtml += '<p><span class="label">相机型号:</span> ' + (exifData.Model || 'N/A') + '</p>';
+                    exifHtml += '<p>拍摄时间: ' + (this.exifdata.DateTimeOriginal || '未知') + '</p>';
+                    exifHtml += '<p>光圈值: ' + (this.exifdata.FNumber || '未知') + '</p>';
+                    exifHtml += '<p>焦距: ' + (this.exifdata.FocalLength || '未知') + '</p>';
+                    exifHtml += '<p>镜头型号: ' + (this.exifdata.LensModel || '未知') + '</p>';
 
                     exifInfo.innerHTML = exifHtml;
                 } else {
-                    exifInfo.innerHTML = '<p>No Exif data available</p>';
+                    exifInfo.textContent = '无可用的 EXIF 信息';
                 }
 
                 element.appendChild(exifInfo);
             });
         }
 
-        function parseExifDateTime(dateTimeString) {
-            var dateTimeParts = dateTimeString.split(' ');
-            var dateParts = dateTimeParts[0].split(':');
-            var timeParts = dateTimeParts[1].split(':');
-
-            var year = parseInt(dateParts[0]);
-            var month = parseInt(dateParts[1]) - 1;
-            var day = parseInt(dateParts[2]);
-            var hour = parseInt(timeParts[0]);
-            var minute = parseInt(timeParts[1]);
-            var second = parseInt(timeParts[2]);
-
-            return new Date(year, month, day, hour, minute, second);
-        }
-
-        function parseExifCoordinate(coordinate) {
-            return coordinate[0] + coordinate[1] / 60 + coordinate[2] / 3600;
-        }
-
-        function formatDate(date) {
-            var options = { year: 'numeric', month: 'long', day: 'numeric', hour: 'numeric', minute: 'numeric', second: 'numeric' };
-            return date.toLocaleDateString('en-US', options);
-        }
-
-        function formatCoordinates(latitude, longitude) {
-            return latitude.toFixed(6) + ', ' + longitude.toFixed(6);
-        }
-
-        function sortImagesByExifDateTime() {
-            var imageContainers = Array.from(document.querySelectorAll('.image-container'));
-
-            imageContainers.sort(function(a, b) {
-                var dateTimeA = parseExifDateTime(a.querySelector('.exif-info .date-taken').textContent);
-                var dateTimeB = parseExifDateTime(b.querySelector('.exif-info .date-taken').textContent);
-
-                return dateTimeB - dateTimeA;
-            });
-
+        function loadImages(startIndex, count) {
             var gallery = document.querySelector('.gallery');
-            imageContainers.forEach(function(container) {
-                gallery.appendChild(container);
-            });
+
+            for (var i = startIndex; i < startIndex + count; i++) {
+                var imageSrc = imagesFolder + 'image' + i + '.jpg';
+                var imageContainer = document.createElement('div');
+                imageContainer.classList.add('image-container');
+
+                var image = new Image();
+                image.src = imageSrc;
+                imageContainer.appendChild(image);
+
+                loadImageExif(image, imageContainer);
+
+                gallery.appendChild(imageContainer);
+                loadedImages.push(imageContainer);
+            }
+        }
+
+        function shuffleArray(array) {
+            var currentIndex = array.length;
+            var temporaryValue, randomIndex;
+
+            while (currentIndex !== 0) {
+                randomIndex = Math.floor(Math.random() * currentIndex);
+                currentIndex -= 1;
+                temporaryValue = array[currentIndex];
+                array[currentIndex] = array[randomIndex];
+                array[randomIndex] = temporaryValue;
+            }
+
+            return array;
         }
 
         document.addEventListener('DOMContentLoaded', function() {
-            loadImages(startIndex, imagesPerLoad);
+            loadImages(0, imagesPerLoad);
 
             window.addEventListener('scroll', function() {
-                var scrollTop = document.documentElement.scrollTop || document.body.scrollTop;
-                var windowHeight = window.innerHeight || document.documentElement.clientHeight;
-                var documentHeight = document.documentElement.scrollHeight;
+                if (window.innerHeight + window.pageYOffset >= document.body.offsetHeight - scrollThreshold) {
+                    var remainingImages = loadedImages.slice(imagesPerLoad);
+                    loadedImages = loadedImages.slice(0, imagesPerLoad);
 
-                if (documentHeight - scrollTop - windowHeight < scrollThreshold) {
-                    startIndex += imagesPerLoad;
-                    loadImages(startIndex, imagesPerLoad);
+                    shuffleArray(remainingImages);
+
+                    remainingImages.forEach(function(imageContainer) {
+                        var gallery = document.querySelector('.gallery');
+                        gallery.appendChild(imageContainer);
+                    });
                 }
             });
         });
